Fixes #12131 - long strings in reports are hard-wrapped
(cherry picked from commit c687f3a1c9d157b1313070ddc005b518af30acad)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -535,3 +535,14 @@ i.glyphicon.host-status {
 span.glyphicon.host-status {
   top: 3px;
 }
+
+.break-me {
+  white-space: -moz-pre-wrap; /* Mozilla */
+  white-space: -hp-pre-wrap; /* HP printers */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: pre-wrap; /* CSS 2.1 */
+  white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
+  word-wrap: break-word; /* IE */
+  word-break: break-all;
+}
